--- a/app/src/main/res/layout/activity_cafe_order.xml
+++ b/app/src/main/res/layout/activity_cafe_order.xml
@@ -19,11 +19,25 @@
         android:layout_marginVertical="20dp"
         />
 
+
+    <TextView
+        android:id="@+id/orderListViewId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cafeHouseOrderList"
+        android:textSize="20sp"
+        android:textColor="@color/primary"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="10dp"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
 
+        >
         <Button
             android:id="@+id/backToCafeMainActivity"
             android:layout_width="250dp"
@@ -31,6 +45,7 @@
             android:layout_marginVertical="40dp"
             android:text="@string/backToMainActivity"
             android:textSize="15sp"
+            android:layout_gravity="center"
             />
     </LinearLayout>
 
